fix: 修复 Sonar 暴露的高危缺陷与安全漏洞
- LogAspect：finally 块记录日志失败不再向上抛出，避免吞掉业务异常（S1143/S1163）
- LicenseCreateService：改用 try-with-resources 关闭文件流，移除 finally 中的 throw（S1143/S1163）
- RedisLockUtils：释放锁被中断时恢复中断标记（S2142）
- OssStorageStrategy：PartPayload record 重写 equals/hashCode/toString 以考虑 byte[] 内容（S6218）
- EnhancedMultipartFile：处理 createNewFile 返回值，文件已存在时抛异常（S899）
- ProgressTracker：字节阈值常量改为 long 运算，消除 int 乘法溢出隐患（S2184）
- PasswordEncoderAutoConfiguration：算法配置缺省回退 BCRYPT，避免潜在 NPE（S2259）
- ServerInfoUtils：Windows 脚本改在私有临时目录创建、cscript 使用绝对路径，Linux shell 使用 /bin/sh 绝对路径（S5443/S4036）
- WebSocketHandler：日志不再记录用户消息内容，改记载荷长度（S5145）

Assisted-by: ZCode